Now uses chrome.alarms and also support for Bing
Now uses chrome.alarms API instead of window.setTimeout to reduce memory usage.

Also supports Bing Image of the Day by using crossorigin.me.

--- a/options.html
+++ b/options.html
@@ -48,7 +48,7 @@
         <option value="unsplash-technology">Unsplash.com - Technology</option>
         <option value="unsplash-objects">Unsplash.com - Objects</option>
         <option value="nasa-apod">Nasa.gov - Astronomy Picture of the Day</option><!--https://api.nasa.gov/api.html#how-do-i-see-my-current-usage?-->
-        <option value="bing-iod" disabled>Bing.com - Image of the Day</option> <!--http://www.bing.com/HPImageArchive.aspx?format=js&idx=0&n=1-->
+        <option value="bing-iod">Bing.com - Image of the Day</option> <!--http://www.bing.com/HPImageArchive.aspx?format=js&idx=0&n=1-->
         <option value="desktoppr-wallpaper">Desktoppr.co - Random</option><!--https://api.desktoppr.co/1/wallpapers/random?auth_token=JitLTYzKio-PyVWfNvhx-->
         <option value="pixabay-fashion">Pixabay.com - Fasion</option>
         <option value="pixabay-nature">Pixabay.com - Nature</option>
