--- a/options.html
+++ b/options.html
@@ -5,7 +5,7 @@
     <script src="jquery-2.2.3.min.js"></script>
     <script src="options.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700" rel="stylesheet">
-    <link href="options.scss" rel="stylesheet">
+    <link href="options.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <h3>WallpaperCycler - Options</h3>
