Added DeviantArt sources, removed Pixabay sources

--- a/options.html
+++ b/options.html
@@ -28,26 +28,20 @@
         <option value="reddit-animewallpaper-hot-nsfw">/r/animewallpaper - Hottest include NSFW</option>
         <option value="reddit-animewallpaper-new-nsfwonly">/r/animewallpaper - Newest NSFW Only</option>
         <option value="reddit-animewallpaper-hot-nsfwonly">/r/animewallpaper - Hottest NSFW Only</option>
-        <option value="pixabay-fashion">Pixabay.com - Fasion</option>
-        <option value="pixabay-nature">Pixabay.com - Nature</option>
-        <option value="pixabay-backgrounds">Pixabay.com - Backgrounds</option>
-        <option value="pixabay-science">Pixabay.com - Science</option>
-        <option value="pixabay-education">Pixabay.com - Education</option>
-        <option value="pixabay-people">Pixabay.com - People</option>
-        <option value="pixabay-feelings">Pixabay.com - Feelings</option>
-        <option value="pixabay-religion">Pixabay.com - Religion</option>
-        <option value="pixabay-health">Pixabay.com - Health</option>
-        <option value="pixabay-places">Pixabay.com - Places</option>
-        <option value="pixabay-animals">Pixabay.com - Animals</option>
-        <option value="pixabay-industry">Pixabay.com - Industry</option>
-        <option value="pixabay-food">Pixabay.com - Food</option>
-        <option value="pixabay-computer">Pixabay.com - Comptuer</option>
-        <option value="pixabay-sports">Pixabay.com - Sports</option>
-        <option value="pixabay-transportation">Pixabay.com - Transportation</option>
-        <option value="pixabay-travel">Pixabay.com - Travel</option>
-        <option value="pixabay-buildings">Pixabay.com - Buildings</option>
-        <option value="pixabay-business">Pixabay.com - Business</option>
-        <option value="pixabay-music">Pixabay.com - Music</option>
+        <option value="deviantart-wallpaper-3d">DeviantArt.com - Newest 3 Dimensional Wallpaper</option>
+        <option value="deviantart-wallpaper-abstract">DeviantArt.com - Newest Abstract Wallpaper</option>
+        <option value="deviantart-wallpaper-animals">DeviantArt.com - Newest Animals & Plants Wallpaper</option>
+        <option value="deviantart-wallpaper-fantasy">DeviantArt.com - Newest Fantasy Wallpaper</option>
+        <option value="deviantart-wallpaper-fractals">DeviantArt.com - Newest Fractals Wallpaper</option>
+        <option value="deviantart-wallpaper-widescreen">DeviantArt.com - Newest HDTV & Widescreen Wallpaper</option>
+        <option value="deviantart-wallpaper-scenery">DeviantArt.com - Newest Landscapes & Scenery Wallpaper</option>
+        <option value="deviantart-wallpaper-apple">DeviantArt.com - Newest Mac & PC OS Wallpaper</option>
+        <option value="deviantart-wallpaper-horror">DeviantArt.com - Newest Macabre & Horror Wallpaper</option>
+        <option value="deviantart-wallpaper-minimalistic">DeviantArt.com - Newest Minimalistic Wallpaper</option>
+        <option value="deviantart-wallpaper-other">DeviantArt.com - Newest Other Wallpaper</option>
+        <option value="deviantart-wallpaper-scifi">DeviantArt.com - Newest Science Fiction Wallpaper</option>
+        <option value="deviantart-wallpaper-vector">DeviantArt.com - Newest Vector Wallpaper</option>
+        <option value="deviantart-wallpaper-vehicles">DeviantArt.com - Newest Vehicles Wallpaper</option>
         <option value="random-random">Random Source - Random Category</option>
       </select>
       <br>
@@ -69,8 +63,8 @@
       </select>
       <br>
       <br>
-      <label for="interval">Cycle Interval (<span id="interval_unit_span"></span>): </label>
-      <input type="number" step="1" min="1" id="interval">
+      <label for="interval">Cycle Interval: </label>
+      <input type="number" step="0.5" min="1" id="interval">
       <br>
       <br>
       <span><b id="remaining"></b> until next Cycle!</span>
