Added Random - Random SFW source
You don't want to open your computer to find that the random wallpaper option has given you NSFW ones, right?

--- a/options.html
+++ b/options.html
@@ -43,6 +43,7 @@
         <option value="deviantart-wallpaper-vector">DeviantArt.com - Newest Vector Wallpaper</option>
         <option value="deviantart-wallpaper-vehicles">DeviantArt.com - Newest Vehicles Wallpaper</option>
         <option value="random-random">Random Source - Random Category</option>
+        <option value="random-random-sfw">Random Source - Random SFW Category</option>
       </select>
       <br>
       <!--<br>
